<resources>
    <string name="app_name">MedDirect</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in_doctor_image">Sign In Doctor Image</string>
    <string name="sign_up_doctor_image">Sign Up Doctor Image</string>
    <string name="enter_your_email_id">Email address</string>
    <string name="enter_password">Password</string>
    <string name="log_in">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="welcome_sign_in_to_meet_your_super_heroes">
        <font fgcolor='#F5931D'><b>Welcome!</b></font>\n  Sign in to meet your Super Heroes
    </string>
    <string name="welcome_sign_up_to_meet_your_super_heroes">
        <font fgcolor='#F5931D'><b>Welcome!</b></font>\n  Sign up to meet your Super Heroes
    </string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="hello">Hello,</string>
    <string name="categories">Categories</string>
    <string name="view_more"><![CDATA[View More >]]></string>
    <string name="top_rated_doctor">Top Rated Doctor</string>
    <string name="more"><![CDATA[More>]]></string>
    <string name="rating_s_5">Rating: %s/5</string>
    <string name="welcome_home">Welcome</string>
    <string name="years_of_experience_s">Years of Experience: %s</string>
    <string name="fees_s_per_hour">Fees: %s/hour</string>
    <string name="about">About</string>
    <string name="patients">Patients</string>
    <string name="s_years">%s years</string>
    <string name="experience">Experience</string>
    <string name="fees">Fees</string>
    <string name="s_hour">%s/hr</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="make_appointment">Make Appointment</string>
    <string name="patient_count">%s</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="profile">Profile</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="height">Height(cm)</string>
    <string name="weight_kg">Weight(kg)</string>
    <string name="blood_group">Blood Group</string>
    <string name="update_details">Update Details</string>
    <string name="sign_out">Sign Out</string>
    <string name="category_image">category_image</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time Slot</string>
    <string name="confirm_appointment">Confirm Appointment</string>
    <string name="time_slot">%s:%s</string>
    <string name="problem_description">Problem Description</string>
    <string name="appointment_date">%s, %s %s %s</string>
    <string name="appointment_time">%s:%s</string>
    <string name="patient_name">Patient Name</string>
    <string name="patient_email">Patient Email</string>
    <string name="patient_age">Patient Age</string>
    <string name="patient_weight">Patient Weight</string>
    <string name="patient_height">Patient Height</string>
    <string name="patient_blood_group">Patient Blood Group</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="doctor_category">Doctor Category</string>
    <string name="tv_appointment_date">Appointment Date</string>
    <string name="tv_appointment_time">Appointment Time</string>
    <string name="appointment_instruction">*Update your profile if the details are missing/not updated</string>
    <string name="confirm_message">I hereby declare that the information given above is true and accurate to the best of my knowledge.</string>
    <string name="make_payment">Make Payment</string>
    <string name="appointment_details">Appointment Details</string>
    <string name="doctor_fees">Doctor Fees</string>
    <string name="fees_doctor">%s%s</string>
    <string name="app_charges">App Charges(5%)</string>
    <string name="charges_app">%s%s</string>
    <string name="bill_details">Bill Details</string>
    <string name="total_pay">Total Pay</string>
    <string name="pay_total">%s%s</string>
    <string name="calender_key">%s-%s-%s</string>
    <string name="time_slot_key">%s:%s</string>
    <string name="no_slot_available">No Slot Available</string>
    <string name="profile_icon">profile_icon</string>
    <string name="drawable_app_logo">drawable_app_logo</string>
    <string name="app_slogan">Our excellent care is our specialty</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="appointments">Appointments</string>
    <string name="communicate">Communicate</string>
    <string name="communication">Communication</string>
    <string name="share">Share</string>
    <string name="feedback">Feedback</string>
    <string name="support">Support</string>
    <string name="logout">Logout</string>
    <string name="about_us">About Us</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="share_app">Hey, Found this amazing app providing seamless appointment scheduling with doctors across all medical
                            specialities.\n\nDownload the app by clicking on this link: \nhttps://drive.google.com/file/d/1LU_Fbxn5MFkDr48EgV4QaXm1eSVL0Sl4/view?usp=sharing</string>
    <string name="doctorimage">doctorImage</string>
    <string name="payment_s">Payment: %s</string>
    <string name="appointment_no_s">Id: %s</string>
    <string name="date_s">Date: %s</string>
    <string name="your_appointments">Your Appointments</string>
    <string name="photo_no_appointment">Photo No appointment</string>
    <string name="no_appointment_found">No Appointment Found</string>
    <string name="home_doctor_list_image">home doctor list image</string>
    <string name="doctor_category_image">doctor category image</string>
    <string name="dot">.</string>
    <string name="or">Or</string>
    <string name="appointment_summary">Appointment Summary</string>
    <string name="your_appointment">Your Appointment</string>
    <string name="time_s">Time: %s</string>
    <string name="problem_description_s">Problem Description: %s</string>
    <string name="appointment_charges">Appointment Charges</string>
    <string name="appointment_id_s">Appointment Id: %s</string>
    <string name="payment_id_s">Payment Id: %s</string>
    <string name="permission_required">Permission Required</string>
    <string name="media_permission_required_message">Media permission is required to access the gallery to update profile picture</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="no_thanks">No Thanks</string>
    <string name="profile_picture">profile picture</string>
</resources>