<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn= "navigation_view">

    <item android:title="@string/profile">

        <menu>
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/baseline_home_24"
                android:title="@string/home"
                android:checkable="true"/>

            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/baseline_account_box_24"
                android:title="@string/account"/>

            <item
                android:id="@+id/nav_appointment"
                android:icon="@drawable/baseline_calendar_month_24"
                android:title="@string/appointments"/>
        </menu>

    </item>
    <item
        android:title="@string/communication">
        <menu>
            <group>
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/baseline_share_24"
                    android:title="@string/share"/>
                <item
                    android:id="@+id/nav_feedback"
                    android:icon="@drawable/baseline_feedback_24"
                    android:title="@string/feedback"/>
                <item
                    android:id="@+id/nav_support"
                    android:icon="@drawable/baseline_support_24"
                    android:title="@string/support"/>
                <item
                    android:id="@+id/nav_about_us"
                    android:icon="@drawable/baseline_info_24"
                    android:title="@string/about_us"/>
            </group>
        </menu>
    </item>

    <group>
            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/baseline_logout_24"
                android:title="@string/logout"/>
    </group>

</menu>