<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width= "match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activities.ViewAppointmentDetailsActivity"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appointment_summary"
            android:textSize="30sp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:textColor="@color/red"/>

        <TextView
            android:id="@+id/tv_doctor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Dr Ram Sharma"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tv_doctor_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Eye Specialist"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:textSize="17sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:background="@color/light_blue_200"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_appointment"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/light_blue_200" />

        <TextView
            android:id="@+id/tv_appointment_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_s"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_appointment_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_s"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_appointment_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/problem_description_s"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:maxLines="3"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appointment_charges"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:background="@color/light_blue_200"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/doctor_fees"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?android:colorPrimary"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/tv_doctor_fees"
                        tools:text="600"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="?android:colorPrimary"
                        android:textSize="15sp"
                        android:gravity="end"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:text="@string/app_charges"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?android:colorPrimary"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/tv_company_tax"
                        tools:text="600"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="?android:colorPrimary"
                        android:textSize="15sp"
                        android:gravity="end"/>
                </LinearLayout>

                <View
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:text="@string/total_pay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?android:colorPrimary"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/tv_total_pay"
                        tools:text="600"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="?android:colorPrimary"
                        android:textSize="15sp"
                        android:gravity="end"/>
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appointment_details"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:background="@color/light_blue_200"/>

        <TextView
            android:id="@+id/tv_appointment_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appointment_id_s"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_payment_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_id_s"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:textSize="18sp"/>
    </LinearLayout>
</ScrollView>