<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/doctor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:elevation="20dp">

        <ImageView
            android:id="@+id/appointment_doctor_image"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            tools:src="@tools:sample/avatars"
            android:scaleType="fitCenter"
            android:padding="5dp"
            android:contentDescription="@string/doctorimage"
            android:background="@color/white"/>
        <LinearLayout
            android:layout_marginStart="135dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_marginTop="5dp"
                android:id="@+id/appointment_doctor_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Dr. Neil Huston"
                android:textStyle="bold"
                android:textColor="?android:colorPrimary"
                android:textSize="19sp"/>
            <TextView
                android:id="@+id/appointment_doctor_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Eyes Specialist"
                style="@style/IndigoText"/>
            <TextView
                android:id="@+id/appointment_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appointment_no_s"
                android:layout_marginTop="20dp"
                android:textColor="?android:colorPrimary"/>
            <TextView
                android:id="@+id/appointment_pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_s"
                android:textColor="?android:colorPrimary"/>
            <TextView
                android:id="@+id/appointment_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_s"
                android:textColor="?android:colorPrimary"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>